@@ -165,8 +165,14 @@ K_z = 122
 MOUSEBUTTONDOWN = 5
 MOUSEBUTTONUP = 6
 MOUSEMOTION = 4
+MOUSEWHEEL = 7
 KEYDOWN = 2
 KEYUP = 3
+BUTTON_LEFT = 1
+BUTTON_MIDDLE = 2
+BUTTON_RIGHT = 3
+BUTTON_WHEELUP = 4
+BUTTON_WHEELDOWN = 5
 ACTIVEEVENT = 32768
 APPFOCUSMOUSE = 0
 APPMOUSEFOCUS = 0
