@@ -44,6 +44,7 @@ class Event:
         self.eventName = {Const.MOUSEMOTION: 'MouseMotion',
                           Const.MOUSEBUTTONDOWN: 'MouseButtonDown',
                           Const.MOUSEBUTTONUP: 'MouseButtonUp',
+                          Const.MOUSEWHEEL: 'MouseWheel',
                           Const.KEYDOWN: 'KeyDown',
                           Const.KEYUP: 'KeyUp',
                           Const.ACTIVEEVENT: 'ActiveEvent',
@@ -53,6 +54,7 @@ class Event:
                           'mousemove': 'MouseMotion',
                           'mousedown': 'MouseButtonDown',
                           'mouseup': 'MouseButtonUp',
+                          'mousewheel': 'MouseWheel',
                           'keydown': 'KeyDown',
                           'keyup': 'KeyUp',
                           'mousefocus': 'ActiveEvent',
@@ -65,14 +67,14 @@ class Event:
         self.eventType = [Const.MOUSEMOTION,
                           Const.MOUSEBUTTONDOWN,
                           Const.MOUSEBUTTONUP,
+                          Const.MOUSEWHEEL,
                           Const.KEYDOWN,
                           Const.KEYUP,
                           Const.ACTIVEEVENT,
                           Const.WINDOWENTER,
                           Const.WINDOWLEAVE,
                           Const.QUIT,
-                          'mousemove', 'mousedown', 'mouseup',
-                          'wheel', 'mousewheel', 'DOMMouseScroll',
+                          'mousemove', 'mousedown', 'mouseup', 'mousewheel',
                           'keydown', 'keypress', 'keyup',
                           'mousefocus', 'focus', 'blur', 'visibilitychange',
                           'mouseenter', 'mouseleave', 'pagehide']
@@ -81,9 +83,12 @@ class Event:
                                set([Const.MOUSEMOTION, 'mousemove']),
                            Const.MOUSEBUTTONDOWN:
                                set([Const.MOUSEBUTTONDOWN, 'mousedown',
-                                   'wheel', 'mousewheel',  'DOMMouseScroll']),
+                                   'mousewheeldown']),
                            Const.MOUSEBUTTONUP:
-                               set([Const.MOUSEBUTTONUP, 'mouseup']),
+                               set([Const.MOUSEBUTTONUP, 'mouseup',
+                                   'mousewheelup']),
+                           Const.MOUSEWHEEL:
+                               set([Const.MOUSEWHEEL, 'mousewheel']),
                            Const.KEYDOWN:
                                set([Const.KEYDOWN, 'keydown', 'keypress']),
                            Const.KEYUP:
@@ -99,10 +104,10 @@ class Event:
                                set([Const.QUIT, 'pagehide'])}
         self.eventObj = {'mousedown': MouseDownEvent,
                          'mouseup': MouseUpEvent,
-                         'wheel': MouseWheelEvent,
-                         'mousewheel': MouseWheelEvent,
-                         'DOMMouseScroll': _MouseWheelEvent,
                          'mousemove': MouseMoveEvent,
+                         'mousewheel': MouseWheelEvent,
+                         'mousewheeldown': MouseWheelDownEvent,
+                         'mousewheelup': MouseWheelUpEvent,
                          'keydown': KeyDownEvent,
                          'keyup': KeyUpEvent,
                          'mousefocus': MouseFocusEvent,
@@ -472,7 +477,7 @@ class JEvent:
     def toString(self):
         event_name = self._eventName[self.type]
         attr = {}
-        for name in self.__slots__[1:-1]:
+        for name in self.__slots__[1:len(self.__slots__)]:
             attr[name] = getattr(self, name)
         return '<Event({}-{} {})>'.format(self.type, event_name, repr(attr))
 
@@ -490,16 +495,12 @@ class MouseEvent(JEvent):
     JEvent wrapper for:
         * MouseDownEvent
         * MouseUpEvent
-        * MouseWheelEvent
         * MouseMoveEvent
     """
 
     _types = {'mousemove': Const.MOUSEMOTION,
               'mousedown': Const.MOUSEBUTTONDOWN,
-              'mouseup': Const.MOUSEBUTTONUP,
-              'wheel': Const.MOUSEBUTTONDOWN,
-              'mousewheel': Const.MOUSEBUTTONDOWN,
-              'DOMMouseScroll': Const.MOUSEBUTTONDOWN}
+              'mouseup': Const.MOUSEBUTTONUP}
     _eventName = {Const.MOUSEMOTION: 'MouseMotion',
                   Const.MOUSEBUTTONDOWN: 'MouseButtonDown',
                   Const.MOUSEBUTTONUP: 'MouseButtonUp'}
@@ -561,52 +562,6 @@ class MouseUpEvent(MouseEvent):
                     event.clientY - round(r.top))
 
 
-class MouseWheelEvent(MouseEvent):
-    """
-    MouseWheelEvent object.
-
-    JEvent wrapper with MOUSEBUTTONDOWN event interface.
-    """
-
-    __slots__ = ['type', 'button', 'pos', 'event']
-
-    def __init__(self, event):
-        """
-        Initialize event.
-
-        Attributes:
-            * type: MOUSEBUTTONDOWN
-            * button: mouse button pressed (4-5)
-            * pos: mouse position (x,y)
-            * event: JavaScript event
-        """
-        self.event = event
-        self.type = self._types[event.js_type]
-        if event.deltaY < 0:
-            self.button = 4
-        else:
-            self.button = 5
-        r = env.canvas.getBoundingClientRect()
-        self.pos = (event.clientX - round(r.left),
-                    event.clientY - round(r.top))
-
-
-class _MouseWheelEvent(MouseEvent):
-
-    __slots__ = ['type', 'button', 'pos', 'event']
-
-    def __init__(self, event):
-        self.event = event
-        self.type = self._types[event.js_type]
-        if event.detail < 0:
-            self.button = 4
-        else:
-            self.button = 5
-        r = env.canvas.getBoundingClientRect()
-        self.pos = (event.clientX - round(r.left),
-                    event.clientY - round(r.top))
-
-
 class MouseMoveEvent(MouseEvent):
     """
     MouseMoveEvent object.
@@ -637,6 +592,115 @@ class MouseMoveEvent(MouseEvent):
                     event.clientY - round(r.top))
         self.rel = (event.clientX - env.event.mouseEvt['pre'].clientX,
                     event.clientY - env.event.mouseEvt['pre'].clientY)
+
+
+class MouseWheelDownEvent(JEvent):
+    """
+    MouseWheelEvent object.
+
+    JEvent wrapper with MOUSEBUTTONDOWN event interface.
+    """
+
+    __slots__ = ['type', 'button', 'pos', 'event']
+
+    _eventName = {Const.MOUSEBUTTONDOWN: 'MouseButtonDown'}
+
+    def __init__(self, event):
+        """
+        Initialize event.
+
+        Attributes:
+            * type: MOUSEBUTTONDOWN
+            * button: mouse button pressed (4-5)
+            * pos: mouse position (x,y)
+            * event: JavaScript event
+        """
+        self.event = event
+        self.type = Const.MOUSEBUTTONDOWN
+        if event.deltaY < 0:
+            self.button = 4
+        else:
+            self.button = 5
+        r = env.canvas.getBoundingClientRect()
+        self.pos = (event.clientX - round(r.left),
+                    event.clientY - round(r.top))
+
+
+class MouseWheelUpEvent(JEvent):
+    """
+    MouseWheelEvent object.
+
+    JEvent wrapper with MOUSEBUTTONUP event interface.
+    """
+
+    __slots__ = ['type', 'button', 'pos', 'event']
+
+    _eventName = {Const.MOUSEBUTTONUP: 'MouseButtonUp'}
+
+    def __init__(self, event):
+        """
+        Initialize event.
+
+        Attributes:
+            * type: MOUSEBUTTONUP
+            * button: mouse button pressed (4-5)
+            * pos: mouse position (x,y)
+            * event: JavaScript event
+        """
+        self.event = event
+        self.type = Const.MOUSEBUTTONUP
+        if event.deltaY < 0:
+            self.button = 4
+        else:
+            self.button = 5
+        r = env.canvas.getBoundingClientRect()
+        self.pos = (event.clientX - round(r.left),
+                    event.clientY - round(r.top))
+
+
+class MouseWheelEvent(JEvent):
+    """
+    MouseWheelEvent object.
+
+    JEvent wrapper with MOUSEWHEEL event interface.
+    """
+
+    __slots__ = ['type', 'x', 'y', 'precise_x', 'precise_y', 'event']
+
+    _eventName = {Const.MOUSEWHEEL: 'MouseWheel'}
+
+    def __init__(self, event):
+        """
+        Initialize event.
+
+        Attributes:
+            * type: MOUSEWHEEL
+            * x: mouse wheel rotation (-1,0,1)
+            * y: mouse wheel rotation (-1,0,1)
+            * precise_x: mouse precise wheel rotation (-1,0,1)
+            * precise_y: mouse precise wheel rotation (-1,0,1)
+            * event: JavaScript event
+        """
+        self.event = event
+        self.type = Const.MOUSEWHEEL
+        if event.deltaY != 0:
+            self.x = 0
+            self.precise_x = 0.0
+            if event.deltaY < 0:
+                self.y = 1
+                self.precise_y = 1.0
+            else:
+                self.y = -1
+                self.precise_y = -1.0
+        else:
+            self.y = 0
+            self.precise_y = 0.0
+            if event.deltaX < 0:
+                self.x = -1
+                self.precise_x = -1.0
+            else:
+                self.x = 1
+                self.precise_x = 1.0
 
 
 class KeyEvent(JEvent):
