@@ -8,6 +8,7 @@
 -revise surface initialization.
 -add canvas enter/leave events.
 -revise mouse position methods.
+-revise mousewheel event handling.
 
 0.27    2025-01-18
 -revise to permit import in python.
